@@ -43,6 +43,7 @@ gtk+3.0 (2.99.0-1) UNRELEASED; urgency=low
   * debian/rules:
     - Remove hack to build on PowerPC64. That port is death, and if it's
       ever back, hopefully we won't need to workaround toolchain issues.
+    - Pass -O1 to the linker so dynamic loading is faster.
 
  -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 02 Jan 2011 20:08:53 +0000
 
